...
            "value" : "Verification"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vérification"
          }
        }
      }
    },
    "emptyDuosTitle" : {
      "localizations" : {
...
            "value" : "Passwords do not match"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Les mots de passe ne correspondent pas"
          }
        }
      }
    },
    "passwordUpdatedSuccessfully" : {
      "localizations" : {
...
            "value" : "Register"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inscription"
          }
        }
      }
    },
    "registerCreatingAccount" : {
      "localizations" : {
...
            "value" : "Reset"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Réinitialisation"
          }
        }
      }
    },
    "resetPasswordSuccessAlertTitle" : {
      "localizations" : {
...
